--- a/index.html
+++ b/index.html
@@ -14,5 +14,26 @@
             <button onclick="location.href='register.html'">تسجيل جديد</button>
         </div>
     </div>
+
+    <!-- Firebase SDK -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyD831UbPsY-VUzSuh5fzttXtHhsG0mtk98",
+        authDomain: "witcher-47454.firebaseapp.com",
+        projectId: "witcher-47454",
+        storageBucket: "witcher-47454.appspot.com",
+        messagingSenderId: "550740901734",
+        appId: "1:550740901734:web:ebda12b673f275747a92a7"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+    </script>
 </body>
 </html>
